--- a/package.json
+++ b/package.json
@@ -10,5 +10,12 @@
     "nabdali"
   ],
   "author": "Nabdali",
-  "license": "ISC"
+  "license": "ISC",
+  "bin": {
+    "nabdali": "./index.mjs"
+  },
+  "dependencies": {
+    "boxen": "^7.0.0",
+    "chalk": "^5.0.1"
+  }
 }
