doc: init a readme and change name of the package

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cli-business-card",
+  "name": "nabdali-cli",
   "version": "1.0.0",
   "description": "A CLI dev business card ",
   "main": "index.js",
